Adding placeholder slides for the presentation's various topics in order to allow for easier collaboration as we finish adding content to the presentation

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -324,6 +324,386 @@ public class AppointmentManager {
                         </pre>
                     </section>
                 </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Inconsistent State</h2>
+                        // TODO Include img src and dimensions as appropriate; possibly a deriviation of 'Not Sure Fry' (from Futurama)
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Inconsistent State</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Weak Typing</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Weak Typing</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Lack of Encapsulation</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Lack of Encapsulation</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Growing Parameter List</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Growing Parameter List</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Unnecessarily Restrictive Collections API's</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Unnecessarily Restrictive Collections API's</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Unnecessarily Restrictive Validation</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Unnecessarily Restrictive Validation</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Abstraction Leaks</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Abstraction Leaks</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Compiling Against Implementations</h2>
+                        // TODO Include img src and dimensions as appropriate; Forest Gump... that's all i got to say about that?
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Compiling Against Implementations</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Burdening Consumers with Common Tasks</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Burdening Consumers with Common Tasks</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <section data-background-color="#4d7e65">
+                        <h2>Lack of Adapters</h2>
+                        // TODO Include img src and dimensions as appropriate
+                        <img src="" height=350 width=350 />
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section>
+                        <h2>Lack of Adapters</h2>
+                        <ul>
+                            <li>...</li>
+                            <li>...</li>
+                        </ul>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                    <section data-state="slide-with-code">
+                        <h2>Code Example Slide</h2>
+                        <pre>
+                            <code data-trim>
+// code goes here with no additional spaces
+                            </code>
+                        </pre>
+                        <aside class="notes">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                        </aside>
+                    </section>
+                </section>
+                <section>
+                    <h1>Summary</h1>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </section>
+                <section>
+                    <h1>Questions?</h1>
+                </section>
             </div>
         </div>
 
