Adding some memes for the transition slides

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -327,8 +327,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Inconsistent State</h2>
-                        // TODO Include img src and dimensions as appropriate; possibly a deriviation of 'Not Sure Fry' (from Futurama)
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/PoMGuCG.png" height=263 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -364,8 +363,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Weak Typing</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/0bFY1B5.png" height=257 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -401,8 +399,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Lack of Encapsulation</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/O2wXo9I.png" height=304 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -438,8 +435,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Growing Parameter List</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/DXZRJY7.png" height=263 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -549,8 +545,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Abstraction Leaks</h2>
-                        // TODO Include img src and dimensions as appropriate
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/YJJJ4b2.png" height=233 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
@@ -586,8 +581,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Compiling Against Implementations</h2>
-                        // TODO Include img src and dimensions as appropriate; Forest Gump... that's all i got to say about that?
-                        <img src="" height=350 width=350 />
+                        <img src="http://i.imgur.com/A9bGrQW.png" height=364 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
