Updating confession bear meme for compiling against implementations to be more of a confession and less of a scumbag steve move...

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -581,7 +581,7 @@ public class AppointmentManager {
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Compiling Against Implementations</h2>
-                        <img src="http://i.imgur.com/A9bGrQW.png" height=364 width=350 />
+                        <img src="http://i.imgur.com/7rpoD8c.png" height=364 width=350 />
                         <aside class="notes">
                             <ul>
                                 <li></li>
