fix for missing tags and additional quotes

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -85,7 +85,7 @@
                             <li>Place unnecessary burden on consumers (if they must parse or translate)</li>
                         </ul>
                     </section>
-                    <section data-state="slide-with-code"'">
+                    <section data-state="slide-with-code">
                         <h2>Poor Data Type Example</h2>
                         <pre>
                             <code data-trim>
@@ -131,6 +131,7 @@ public void consume(RecurringAppointment recurringAppointment) {
                             <ul>
                                 <li>The doc didn't indicate if case-sensitive, so cross your fingers!</li>
                                 <li>Awkward zero-based indexing used for parsing days of week; Relies on API doc to indicate that it starts with Sunday vs Monday</li>
+                            </ul>
                         </aside>
                     </section>
                     <section data-state="slide-with-code">
